# langviz

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
examples/: blogtext_subset_cleaned.csv  example.md
src/app/: __init__.py  callbacks.py
src/langviz/: __init__.py  app.py
src/langviz/app/: __init__.py  callbacks.py  data_loader.py  layout.py  processing.py
src/langviz/app/components/tabs/: about.py
src/langviz/app/layout/: __init__.py
src/langviz/app/processing/: __init__.py
src/langviz/app/tabs/: __init__.py
src/langviz/app/tabs/about/: __init__.py  data_loading.py  description.py  get_started.py  links.py  motivation.py
src/langviz/app/tabs/corpus/: __init__.py
src/langviz/app/tabs/document/: __init__.py
src/langviz/app/tabs/sentence/: __init__.py
src/langviz/cli/: __init__.py
src/langviz/components/tabs/: about.py  get_started.py
src/langviz/core/: __init__.py  callbacks.py
src/langviz/core/layout/: __init__.py  about.py  about_tab.py  corpus.py  corpus_tab.py  document_tab.py  start_tab.py
src/langviz/core/layout/about/: __init__.py
src/langviz/core/layout/corpus/: __init__.py
src/langviz/core/layout/document/: __init__.py
src/langviz/data_loader/: __init__.py  cache.py
src/langviz/processing/: __init__.py  load_spacy.py
src/langviz/utils/: __init__.py
